sumo/tests/duarouter/routes/style1_input/errors/vehicle_empty_arrivallane/errors.duarouter
Error: Attribute 'arrivalLane' in definition of a vehicle is empty.
Error: Invalid arrivalLane definition for vehicle '0'
Quitting (on error).
